# rt-thread-bsp-stm32f407-doflye

./: .config  CMakeLists.txt  README.md  project.ewp  project.uvoptx  project.uvproj  project.uvprojx  rtconfig.h  rtconfig.py  template.uvopt  template.uvoptx  template.uvproj  template.uvprojx
applications/: main.c
board/: Kconfig  SConscript  board.c  drv_nrf24l01.c  drv_nrf24l01.h
board/CubeMX_Config/: .mxproject  CubeMX_Config.ioc
board/CubeMX_Config/Inc/: main.h
board/CubeMX_Config/Src/: stm32f4xx_hal_msp.c
board/linker_scripts/: link.lds
